--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "name": "basictestapp",
-  "license": "0BSD",
-  "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,13 +7,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.11",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.3"
+    "expo": "~46.0.17",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-native": "0.69.9",
+    "expo-sqlite": "~10.3.0",
+    "expo-constants": "~13.2.4",
+    "lodash.debounce": "*",
+    "@expo/vector-icons": "^13.0.0",
+    "react-native-paper": "4.9.2",
+    "react-native-web": "~0.18.7",
+    "react-dom": "18.0.0",
+    "@expo/webpack-config": "^0.17.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
